// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendIpfs should error if wrong mnemonic 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-secondary-background"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoiQi bBgYbl"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzqARJ ktgHVM"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm RZxAM text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                    color="primary"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw fFXzuz p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="absolute right-0 flex items-center justify-center w-3 h-3 mr-3 -mt-3 rounded-full bg-theme-background border-theme-background"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm RZxAM text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm RZxAM text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    qr-code.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-neutral-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 -space-x-2 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eQpXWo border-theme-primary-contrast dark:border-theme-neutral-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500 dark:bg-theme-neutral-800 dark:border-theme-neutral-800 dark:text-theme-text"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 mx-auto font-semibold px-14 text-theme-secondary-text"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxiKw eKFBFH"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-secondary-text"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fzoyTs cPoNle"
              >
                <li
                  class="sc-fzqNqU jDKVmr"
                />
                <li
                  class="sc-fzqNqU jDKVmr"
                />
                <li
                  class="sc-fzqNqU jDKVmr"
                />
                <li
                  class="sc-fzqNqU iyMmQK"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    class="space-y-8"
                    data-testid="AuthenticationStep"
                  >
                    <div
                      class="flex items-end justify-between bg-theme-background"
                    >
                      <div>
                        <h1
                          class="mb-0 md:text-4xl"
                          data-testid="header__title"
                        >
                          Authenticate
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Enter your twelve word mnemonic to authenticate the transaction.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="sc-AxirZ kMHTdH flex flex-col space-y-2"
                    >
                      <label
                        class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="mnemonic"
                      >
                        Mnemonic
                        <div
                          class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                          data-testid="FormLabel__required"
                        />
                      </label>
                      <div
                        class="sc-fzpjYC dHxzen max-w-20"
                        data-testid="InputPassword"
                      >
                        <input
                          aria-invalid="true"
                          class="sc-fzqNJr hjzlwF overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-12"
                          data-testid="AuthenticationStep__mnemonic"
                          name="mnemonic"
                          type="password"
                        />
                        <div
                          class="sc-fzoyAV sc-fzoXzr YtqIf my-px mr-4"
                        >
                          <button
                            class="flex items-center justify-center w-full h-full text-2xl focus:outline-none text-theme-primary-400"
                            data-testid="InputPassword__toggle"
                            type="button"
                          >
                            <div
                              class="sc-AxiKw dzBdqj"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                eye.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                      <p
                        class="text-sm text-theme-danger"
                      >
                        Invalid Mnemonic
                      </p>
                    </fieldset>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-2"
                >
                  <button
                    class="sc-AxjAm joLCoM"
                    color="primary"
                    data-testid="SendIpfs__button--back"
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxjAm BsmvP"
                    color="primary"
                    data-testid="SendIpfs__button--submit"
                    disabled=""
                    type="submit"
                  >
                    Sign & Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendIpfs should navigate between steps 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-secondary-background"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoiQi bBgYbl"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzqARJ ktgHVM"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm RZxAM text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                    color="primary"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw fFXzuz p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="absolute right-0 flex items-center justify-center w-3 h-3 mr-3 -mt-3 rounded-full bg-theme-background border-theme-background"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm RZxAM text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm RZxAM text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    qr-code.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-neutral-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 -space-x-2 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eQpXWo border-theme-primary-contrast dark:border-theme-neutral-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500 dark:bg-theme-neutral-800 dark:border-theme-neutral-800 dark:text-theme-text"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 mx-auto font-semibold px-14 text-theme-secondary-text"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxiKw eKFBFH"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-secondary-text"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fzoyTs cPoNle"
              >
                <li
                  class="sc-fzqNqU jDKVmr"
                />
                <li
                  class="sc-fzqNqU jDKVmr"
                />
                <li
                  class="sc-fzqNqU jDKVmr"
                />
                <li
                  class="sc-fzqNqU jDKVmr"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="TransactionSuccessful"
                  >
                    <div
                      class="flex items-end justify-between bg-theme-background"
                    >
                      <div>
                        <h1
                          class="mb-0 md:text-4xl"
                          data-testid="header__title"
                        >
                          Transaction Sent
                        </h1>
                      </div>
                    </div>
                    <svg
                      class="w-full"
                    >
                      transaction_successful.svg
                    </svg>
                    <p
                      class="text-theme-secondary-text"
                    >
                      Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
                    </p>
                    <div>
                      <div
                        class="sc-fznyAO laljlJ"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            ID
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="flex items-center"
                            >
                              <a
                                class="sc-fznKkj drQiih inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                                data-testid="Link"
                                rel="noopener noreferrer"
                                to="https://dexplorer.ark.io/transaction/1e9b975eff66a731095876c3b6cbff14fd4dec3bb37a4127c46db3d69131067e"
                              >
                                <span
                                  class="sc-fzpans kkFAbe text-theme-primary-dark"
                                  data-testid="TruncateMiddle"
                                >
                                  1e9b975eff66a … db3d69131067e
                                </span>
                              </a>
                              <span
                                class="flex ml-5 text-theme-primary-300"
                              >
                                <div
                                  class="inline-block cursor-pointer"
                                  data-testid="clipboard__wrapper"
                                >
                                  <div
                                    class="sc-AxiKw dzBdqj"
                                    height="1em"
                                    width="1em"
                                  >
                                    <svg>
                                      copy.svg
                                    </svg>
                                  </div>
                                </div>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznyAO ismzvh"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Cryptoasset
                          </div>
                          <div
                            class="font-semibold"
                          >
                            ARK Devnet
                          </div>
                        </div>
                        <div
                          aria-label="ARK Devnet"
                          class="sc-AxgMl eQpXWo border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-AxiKw dklFyP"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznyAO ismzvh"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            <span
                              class="mr-1"
                            >
                              Sender
                            </span>
                            <div
                              class="sc-fzoLsD jBzTcb"
                              color="warning"
                            >
                              <span
                                class="text-sm"
                              >
                                Your address
                              </span>
                            </div>
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="inline-block truncate align-middle"
                            >
                              <span
                                class="max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base text-theme-text"
                                data-testid="address__wallet-name"
                              >
                                ARK Wallet 1
                              </span>
                              <span
                                class="sc-fzpans kkFAbe text-theme-neutral-light font-semibold text-base"
                                data-testid="address__wallet-address"
                              >
                                D8rr7B … s6YUYD
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex items-center -space-x-2"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznyAO dQFpdT"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            IPFS Hash
                          </div>
                          <div
                            class="font-semibold"
                          >
                            QmPRqPTEEwx95WNcSsk6YQk7aGW9hoZbTF9zE92dBj9H68
                          </div>
                        </div>
                        <div
                          class="sc-AxgMl eQpXWo border-theme-text"
                        >
                          <div
                            class="sc-AxiKw khwooH"
                            height="23"
                            width="23"
                          >
                            <svg>
                              ipfs.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-2"
                >
                  <button
                    class="sc-AxjAm joLCoM block"
                    color="primary"
                    data-testid="SendIpfs__button--back-to-wallet"
                    type="button"
                  >
                    Back to Wallet
                  </button>
                  <button
                    class="sc-AxjAm joLCoM space-x-2"
                    color="primary"
                    data-testid="SendIpfs__button--copy"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                    <span>
                      Copy
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendIpfs should navigate between steps 2`] = `<div />`;

exports[`SendIpfs should render 1st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="SendIpfs__step--first"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div>
        <h1
          class="mb-0 md:text-4xl"
          data-testid="header__title"
        >
          IPFS
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Store an IPFS hash on the network.
        </div>
      </div>
    </div>
    <div
      class="space-y-8 SendTransactionForm"
    >
      <fieldset
        class="sc-AxirZ izhStr relative"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="network"
          >
            Cryptoasset
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
        </div>
        <div>
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SendTransactionForm__network-menu"
            data-testid="SelectNetwork"
            role="combobox"
          >
            <label
              for="SendTransactionForm__network-input"
              id="SendTransactionForm__network-label"
            />
            <div
              class="sc-fzpjYC dHxzen"
              data-testid="SelectNetworkInput"
            >
              <div
                class="sc-fzoyAV sc-fzoLag grqxuS px-4"
              >
                <div
                  class="sc-AxgMl eLFBRi border-theme-neutral-light text-theme-neutral"
                  data-testid="SelectNetworkInput__network"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="SendTransactionForm__network-menu"
                aria-labelledby="SendTransactionForm__network-label"
                autocomplete="off"
                class="sc-fzqNJr hjzlwF overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
                data-testid="SelectNetworkInput__input"
                id="SendTransactionForm__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
          <ul
            aria-labelledby="SendTransactionForm__network-label"
            class="hidden"
            id="SendTransactionForm__network-menu"
            role="listbox"
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="senderAddress"
          >
            Sender
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
        </div>
        <div
          data-testid="sender-address"
        >
          <div>
            <button
              class="sc-fzoXWK eJDXDi SelectAddress  "
              data-testid="SelectAddress__wrapper"
              type="button"
            >
              <div
                class="sc-AxgMl eLFBRi mx-4 bg-theme-neutral-200 border-theme-neutral-300 dark:border-theme-neutral-800"
              />
              <div
                class="inline-block truncate align-middle"
              />
              <div
                class="absolute flex items-center space-x-3 right-4"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </button>
            <input
              class="sc-fzqNJr hjzlwF overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 hidden"
              data-testid="SelectAddress__input"
              name="senderAddress"
              readonly=""
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr flex flex-col space-y-2"
      >
        <label
          class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="hash"
        >
          IPFS Hash
          <div
            class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="sc-fzpjYC dHxzen"
        >
          <input
            class="sc-fzqNJr hjzlwF overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="Input__hash"
            name="hash"
            placeholder=" "
            type="text"
            value=""
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr flex flex-col space-y-2"
      >
        <label
          class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="fee"
        >
          Transaction Fee
          <div
            class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="flex space-x-2"
          data-testid="InputFee"
        >
          <div
            class="flex-1"
          >
            <div
              class="sc-fzpjYC dHxzen"
            >
              <input
                class="sc-fzqNJr hjzlwF overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                data-testid="InputCurrency"
                name="fee"
                type="text"
                value="0"
              />
              <div
                class="absolute bottom-0 w-full px-1"
              >
                <div
                  class="flex flex-wrap justify-center"
                  data-testid="Range"
                >
                  <div
                    class="sc-fznxsB iIkzuE"
                    data-testid="Range__track"
                    style="transform: scale(1); cursor: pointer;"
                  >
                    <div
                      class="sc-fznJRM csJQgR"
                      data-testid="Range__track__filled"
                    >
                      <div
                        aria-valuemax="2e-8"
                        aria-valuemin="0"
                        aria-valuenow="0"
                        class="sc-fznWqX dbpdEg"
                        data-testid="Range__thumb"
                        draggable="false"
                        role="slider"
                        style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300 dark:border-theme-neutral-800"
              data-testid="SelectionBar"
              role="radiogroup"
            >
              <button
                aria-checked="true"
                class="sc-fzpmMD jaYDMx relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
                data-testid="SelectionBarOption"
                role="radio"
                type="button"
              >
                Min
              </button>
              <button
                aria-checked="false"
                class="sc-fzpmMD jaYDMx relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
                data-testid="SelectionBarOption"
                role="radio"
                type="button"
              >
                Average
              </button>
              <button
                aria-checked="false"
                class="sc-fzpmMD jaYDMx relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
                data-testid="SelectionBarOption"
                role="radio"
                type="button"
              >
                Max
              </button>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendIpfs should render 2nd step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="SendIpfs__step--second"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div>
        <h1
          class="mb-0 md:text-4xl"
          data-testid="header__title"
        >
          Transaction Review
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Review the IPFS transaction details before sending
        </div>
      </div>
    </div>
    <div>
      <div
        class="sc-fznyAO laljlJ"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="text-sm font-semibold text-theme-neutral"
          >
            Cryptoasset
          </div>
          <div
            class="font-semibold"
          >
            ARK Devnet
          </div>
        </div>
        <div
          aria-label="ARK Devnet"
          class="sc-AxgMl eQpXWo border-theme-primary-100 text-theme-primary-400"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="sc-AxiKw dklFyP"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-fznyAO ismzvh"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="font-semibold"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-theme-neutral"
              >
                <span
                  class="mr-1 text-sm"
                >
                  Sender
                </span>
                <div
                  class="sc-fzoLsD jBzTcb"
                  color="warning"
                >
                  <span
                    class="text-sm"
                  >
                    Your address
                  </span>
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  ARK Wallet 1
                </span>
                <span
                  class="sc-fzpans kkFAbe text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D8rr7B … s6YUYD
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
          data-testid="Avatar"
        >
          <div
            class="w-full h-full"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
      <div
        class="sc-fznyAO ismzvh"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="text-sm font-semibold text-theme-neutral"
          >
            IPFS Hash
          </div>
          <div
            class="font-semibold"
          >
            QmXoypizjW3WknFiJnKLwHCnL72vedxjQkDDP1mXWo6uco
          </div>
        </div>
        <div
          class="sc-AxgMl eQpXWo border-theme-text"
        >
          <div
            class="sc-AxiKw jKXuXN"
            height="23"
            width="21"
          >
            <svg>
              ipfs.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="mt-2"
      >
        <div
          class="border rounded-lg border-theme-neutral-300 dark:border-theme-neutral-800"
        >
          <div
            class="relative p-4"
          >
            <div
              class="flex divide-x divide-theme-neutral-300"
            >
              <div
                class="flex flex-col w-1/2 justify-center px-4 py-2"
              >
                <span
                  class="sc-fznxKY hGZcjl"
                >
                  Transaction Amount
                </span>
                <span
                  class="mt-1 text-lg font-semibold"
                  data-testid="total-amount-box__transaction-amount"
                >
                  0 DARK
                </span>
              </div>
              <div
                class="flex flex-col w-1/2 justify-center px-4 py-2 text-right"
              >
                <span
                  class="sc-fznxKY hGZcjl"
                >
                  Transaction Fee
                </span>
                <span
                  class="mt-1 text-lg font-semibold"
                  data-testid="total-amount-box__transaction-fee"
                >
                  0.1 DARK
                </span>
              </div>
            </div>
            <div
              class="absolute transform top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2"
            >
              <div
                class="py-2 ml-px bg-theme-background"
              >
                <div
                  class="sc-AxiKw kgmJgX"
                  height="14"
                  width="14"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col items-center py-6 border-t rounded-b-lg border-theme-neutral-300 dark:border-theme-neutral-800 justfiy-center bg-theme-neutral-contrast"
          >
            <span
              class="sc-fznxKY hGZcjl"
            >
              Total Amount
            </span>
            <span
              class="text-2xl font-bold"
              data-testid="total-amount-box__total"
            >
              0.1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendIpfs should render 4th step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div>
        <h1
          class="mb-0 md:text-4xl"
          data-testid="header__title"
        >
          Transaction Sent
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction_successful.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
    </p>
    <div>
      <div
        class="sc-fznyAO dQFpdT"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="text-sm font-semibold text-theme-neutral"
          >
            IPFS Hash
          </div>
          <div
            class="font-semibold"
          />
        </div>
        <div
          class="sc-AxgMl eQpXWo border-theme-text"
        >
          <div
            class="sc-AxiKw khwooH"
            height="23"
            width="23"
          >
            <svg>
              ipfs.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendIpfs should show an error if an invalid IPFS hash is entered 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-secondary-background"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoiQi bBgYbl"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzqARJ ktgHVM"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm RZxAM text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                    color="primary"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw fFXzuz p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="absolute right-0 flex items-center justify-center w-3 h-3 mr-3 -mt-3 rounded-full bg-theme-background border-theme-background"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm RZxAM text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm RZxAM text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    qr-code.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-neutral-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 -space-x-2 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eQpXWo border-theme-primary-contrast dark:border-theme-neutral-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500 dark:bg-theme-neutral-800 dark:border-theme-neutral-800 dark:text-theme-text"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 mx-auto font-semibold px-14 text-theme-secondary-text"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxiKw eKFBFH"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-secondary-text"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fzoyTs cPoNle"
              >
                <li
                  class="sc-fzqNqU jDKVmr"
                />
                <li
                  class="sc-fzqNqU iyMmQK"
                />
                <li
                  class="sc-fzqNqU iyMmQK"
                />
                <li
                  class="sc-fzqNqU iyMmQK"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="SendIpfs__step--first"
                  >
                    <div
                      class="flex items-end justify-between bg-theme-background"
                    >
                      <div>
                        <h1
                          class="mb-0 md:text-4xl"
                          data-testid="header__title"
                        >
                          IPFS
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Store an IPFS hash on the network.
                        </div>
                      </div>
                    </div>
                    <div
                      class="space-y-8 SendTransactionForm"
                    >
                      <fieldset
                        class="sc-AxirZ izhStr relative"
                      >
                        <div
                          class="mb-2"
                        >
                          <label
                            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                            data-testid="FormLabel"
                            for="network"
                          >
                            Cryptoasset
                            <div
                              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                              data-testid="FormLabel__required"
                            />
                          </label>
                        </div>
                        <div>
                          <div
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="SendTransactionForm__network-menu"
                            data-testid="SelectNetwork"
                            role="combobox"
                          >
                            <label
                              for="SendTransactionForm__network-input"
                              id="SendTransactionForm__network-label"
                            />
                            <div
                              class="sc-fzpjYC dHxzen"
                              data-testid="SelectNetworkInput"
                            >
                              <div
                                class="sc-fzoyAV sc-fzoLag grqxuS px-4"
                              >
                                <div
                                  aria-label="ARK Devnet"
                                  class="sc-AxgMl eLFBRi border-theme-primary-100 text-theme-primary-400"
                                  data-testid="SelectNetworkInput__network"
                                >
                                  <div
                                    class="sc-AxiKw dklFyP"
                                    data-testid="NetworkIcon__icon"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      ark.svg
                                    </svg>
                                  </div>
                                </div>
                              </div>
                              <span
                                class="sc-fzoyAV gCfUUB py-3 font-normal border border-transparent opacity-50 pointer-events-none pl-15"
                                data-testid="SelectNetworkInput__typeahead"
                              >
                                ARK Devnet
                              </span>
                              <input
                                aria-autocomplete="list"
                                aria-controls="SendTransactionForm__network-menu"
                                aria-labelledby="SendTransactionForm__network-label"
                                autocomplete="off"
                                class="sc-fzqNJr hjzlwF overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
                                data-testid="SelectNetworkInput__input"
                                disabled=""
                                id="SendTransactionForm__network-input"
                                placeholder="Enter a cryptoasset name"
                                value="ARK Devnet"
                              />
                            </div>
                          </div>
                          <ul
                            aria-labelledby="SendTransactionForm__network-label"
                            class="hidden"
                            id="SendTransactionForm__network-menu"
                            role="listbox"
                          />
                        </div>
                      </fieldset>
                      <fieldset
                        class="sc-AxirZ izhStr relative"
                      >
                        <div
                          class="mb-2"
                        >
                          <label
                            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                            data-testid="FormLabel"
                            for="senderAddress"
                          >
                            Sender
                            <div
                              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                              data-testid="FormLabel__required"
                            />
                          </label>
                        </div>
                        <div
                          data-testid="sender-address"
                        >
                          <div>
                            <button
                              class="sc-fzoXWK eJDXDi SelectAddress  "
                              data-testid="SelectAddress__wrapper"
                              type="button"
                            >
                              <div
                                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 bXyrQO mx-4"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full"
                                >
                                  <img
                                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                  />
                                </div>
                              </div>
                              <div
                                class="inline-block truncate align-middle"
                              >
                                <span
                                  class="sc-fzpans kkFAbe text-theme-text font-semibold text-base"
                                  data-testid="address__wallet-address"
                                >
                                  D8rr7B1d6TL6p … sKp1VBMs6YUYD
                                </span>
                              </div>
                              <div
                                class="absolute flex items-center space-x-3 right-4"
                              >
                                <div
                                  class="sc-AxiKw dklFyP"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    user.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                            <input
                              class="sc-fzqNJr hjzlwF overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 hidden"
                              data-testid="SelectAddress__input"
                              name="senderAddress"
                              readonly=""
                              type="text"
                              value="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            />
                          </div>
                        </div>
                      </fieldset>
                      <fieldset
                        class="sc-AxirZ kMHTdH flex flex-col space-y-2"
                      >
                        <label
                          class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                          data-testid="FormLabel"
                          for="hash"
                        >
                          IPFS Hash
                          <div
                            class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                            data-testid="FormLabel__required"
                          />
                        </label>
                        <div
                          class="sc-fzpjYC dHxzen"
                        >
                          <input
                            aria-invalid="true"
                            class="sc-fzqNJr hjzlwF overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-20"
                            data-testid="Input__hash"
                            name="hash"
                            placeholder=" "
                            type="text"
                            value="invalid-ipfs-hash"
                          />
                        </div>
                        <p
                          class="text-sm text-theme-danger"
                        >
                          The IPFS hash is not valid
                        </p>
                      </fieldset>
                      <fieldset
                        class="sc-AxirZ izhStr flex flex-col space-y-2"
                      >
                        <label
                          class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                          data-testid="FormLabel"
                          for="fee"
                        >
                          Transaction Fee
                          <div
                            class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                            data-testid="FormLabel__required"
                          />
                        </label>
                        <div
                          class="flex space-x-2"
                          data-testid="InputFee"
                        >
                          <div
                            class="flex-1"
                          >
                            <div
                              class="sc-fzpjYC dHxzen"
                            >
                              <input
                                class="sc-fzqNJr hjzlwF overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                                data-testid="InputCurrency"
                                name="fee"
                                type="text"
                                value="5"
                              />
                            </div>
                          </div>
                          <div>
                            <div
                              class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300 dark:border-theme-neutral-800"
                              data-testid="SelectionBar"
                              role="radiogroup"
                            >
                              <button
                                aria-checked="true"
                                class="sc-fzpmMD jaYDMx relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
                                data-testid="SelectionBarOption"
                                role="radio"
                                type="button"
                              >
                                Min
                              </button>
                              <button
                                aria-checked="true"
                                class="sc-fzpmMD jaYDMx relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
                                data-testid="SelectionBarOption"
                                role="radio"
                                type="button"
                              >
                                Average
                              </button>
                              <button
                                aria-checked="true"
                                class="sc-fzpmMD jaYDMx relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
                                data-testid="SelectionBarOption"
                                role="radio"
                                type="button"
                              >
                                Max
                              </button>
                            </div>
                          </div>
                        </div>
                      </fieldset>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-2"
                >
                  <button
                    class="sc-AxjAm joLCoM"
                    color="primary"
                    data-testid="SendIpfs__button--back"
                    disabled=""
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxjAm BsmvP"
                    color="primary"
                    data-testid="SendIpfs__button--continue"
                    disabled=""
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
